# PetriTerm

./: .clang-format  .clang-tidy  CMakeLists.txt
.github/workflows/: ci.yml
include/petriterm/engine/: ColorPalette.hpp  GameLoop.hpp  Grid.hpp  InputManager.hpp  RandomNumberGenerator.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  TerminalWindow.hpp
include/petriterm/game/: Viewport.hpp
include/petriterm/world/: Biome.hpp  ClimateSystem.hpp  NoiseGenerator.hpp  Tile.hpp  WorldGenerator.hpp  WorldGrid.hpp
src/: main.cpp
src/engine/: ColorPalette.cpp  GameLoop.cpp  InputManager.cpp  RandomNumberGenerator.cpp  Renderer.cpp  SceneManager.cpp  TerminalWindow.cpp
src/game/: Viewport.cpp
src/world/: Biome.cpp  ClimateSystem.cpp  NoiseGenerator.cpp  WorldGenerator.cpp  WorldGrid.cpp
tests/: test_climate_system.cpp  test_grid.cpp  test_noise_determinism.cpp  test_random_number_generator.cpp  test_viewport.cpp  test_world_generation.cpp  test_world_grid.cpp
